tests/errors/constructor_return_null_type_mismatch.dang
# Explicit constructor returns must be the non-null constructed type
type BadNullConstructor {
  new {
    return null
  }
}

let result = BadNullConstructor
